Supplier Form error labels for all the inpu fields added

--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,7 @@
     -->
 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.0.0/dist/flowbite.min.js"></script>
+
+    <script src="../src/controllers/SupplierController.js"></script>
   </body>
 </html>
